--- a/flask.conf
+++ b/flask.conf
@@ -1,8 +1,11 @@
-<VirtualHost *>
+<VirtualHost *:8080>
     ServerName flask
 
-    WSGIDaemonProcess minimal_flask user=user1 group=group1 threads=5
+    WSGIDaemonProcess minimal_flask user=www-data group=www-data threads=5 python-home=/var/www/minimal_flask/.env
     WSGIScriptAlias / /var/www/minimal_flask/app.wsgi
+
+    ErrorLog ${APACHE_LOG_DIR}/flask-error.log
+    CustomLog ${APACHE_LOG_DIR}/flask-access.log combined
 
     <Directory /var/www/minimal_flask>
         WSGIProcessGroup minimal_flask
