--- a/flask.conf
+++ b/flask.conf
@@ -1,14 +1,14 @@
-<VirtualHost *:8080>
+<VirtualHost *:80>
     ServerName flask
 
-    WSGIDaemonProcess minimal_flask user=www-data group=www-data threads=5 python-home=/var/www/minimal_flask/.env
+    WSGIDaemonProcess app user=www-data group=www-data threads=5 python-home=/var/www/minimal_flask/.env
     WSGIScriptAlias / /var/www/minimal_flask/app.wsgi
 
     ErrorLog ${APACHE_LOG_DIR}/flask-error.log
     CustomLog ${APACHE_LOG_DIR}/flask-access.log combined
 
     <Directory /var/www/minimal_flask>
-        WSGIProcessGroup minimal_flask
+        WSGIProcessGroup app
         WSGIApplicationGroup %{GLOBAL}
         Order deny,allow
         Allow from all
