try another config

--- a/flask.conf
+++ b/flask.conf
@@ -1,5 +1,6 @@
 <VirtualHost *:80>
     ServerName flask
+    DocumentRoot /var/www/minimal_flask/
 
     WSGIDaemonProcess app user=www-data group=www-data threads=5 python-home=/var/www/minimal_flask/.env
     WSGIScriptAlias / /var/www/minimal_flask/app.wsgi
